syntax = "proto3";
option java_package = "com.example.grpc";
option java_outer_classname = "UserServiceProto";
service UserService {
  rpc GetUser (UserRequest) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc DeleteUser (UserRequest) returns (Empty);
  rpc ListUsers (Empty) returns (UserList);
}
message UserRequest {
  string id = 1;
}
message CreateUserRequest {
  string name = 1;
  string email = 2;
}
message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}
message User {
  string id = 1;
  string name = 2;
  string email = 3;
}
message UserList {
  repeated User users = 1;
}
message Empty {}